# ASm

./: .gitignore  CMakeLists.txt  WinFormsApp2.sln  main.c  maino.c
WinFormsApp2/: Form1.Designer.cs  Form1.cs  Logic.cs  WinFormsApp2.csproj
WinFormsApp2.Logic/: Calculator.cs
WinFormsApp2.Tests/: CalculatorTests.cs  Form1Tests.cs  LogicTests.cs  Test1.cs  UnitTest1.cs  WinFormsApp2.Tests.csproj
